--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ navigation:
         url: /blog/index.html
       - title: Events
         url: https://theforeman.org/events
+      - title: Community Demos
+        url: /demos-2021.html        
       - title: Videos
         url: /media.html
       - title: Security
