--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,13 @@ baseurl: "" #keep at "" for the Atom feed
 # latest *stable* version
 foreman_version: '3.6'
 
+# Latest releases
+foreman_latest_releases:
+  - minmaj: '3.6'
+    patch: '0'
+  - minmaj: '3.5'
+    patch: '2'
+
 paginate: 5
 paginate_path: "blog/page:num"
 excerpt_separator: <!--more-->
